# dreamgame

./: .gitignore  Cargo.toml
certificates/: cert.pem  digest.txt  generate.sh  key.pem
src/: app.rs  client_renderer.rs  main.rs  protocol.rs  renderer.rs  server_renderer.rs  settings.rs  settings_common.rs  shared.rs
src/client/: client_config.rs  mod.rs  plugins.rs
src/client/plugins/: client_render_world.rs  client_world.rs
src/server/: mod.rs  plugins.rs  server.rs
src/server/plugins/: server_world.rs
src/shared/: movement.rs  world_generation.rs
